.infrastructure/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: laravel-web
  template:
    metadata:
      labels:
        app: laravel-web
    spec:
      containers:
        - name: php
          image: dashboard:latest
          imagePullPolicy: IfNotPresent
          args: []
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          volumeMounts:
            - name: storage
              mountPath: /var/www/html/storage/logs
              subPath: logs
            - name: storage
              mountPath: /var/www/html/storage/framework/sessions
              subPath: framework/sessions
            - name: storage
              mountPath: /var/www/html/storage/framework/views
              subPath: framework/views
            - name: storage
              mountPath: /var/www/html/storage/framework/cache
              subPath: framework/cache
            - name: storage
              mountPath: /var/www/html/storage/app/public
              subPath: app/public
            - name: data
              mountPath: /var/lib/larakube
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: dashboard-laravel-storage-pvc
        - name: data
          persistentVolumeClaim:
            claimName: dashboard-laravel-data-pvc
