.infrastructure/k8s/base/queues-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queues
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queues
  template:
    metadata:
      labels:
        app: queues
    spec:
      serviceAccountName: larakube-dashboard
      containers:
        - name: php
          image: console:latest
          imagePullPolicy: IfNotPresent
          args: ["php", "artisan", "queue:work"]
          volumeMounts:
            - name: storage
              mountPath: /var/www/html/storage/logs
              subPath: logs
            - name: storage
              mountPath: /var/www/html/bootstrap/cache
              subPath: bootstrap/cache
            - name: storage
              mountPath: /var/www/html/storage/framework/sessions
              subPath: framework/sessions
            - name: storage
              mountPath: /var/www/html/storage/framework/views
              subPath: framework/views
            - name: storage
              mountPath: /var/www/html/storage/framework/cache
              subPath: framework/cache
            - name: storage
              mountPath: /var/www/html/storage/app/public
              subPath: app/public
            - name: data
              mountPath: /var/lib/larakube
            - name: larakube-config
              mountPath: /var/lib/larakube-config
            - name: larakube-workspace
              mountPath: /var/lib/larakube-workspace
              readOnly: true
          livenessProbe:
            exec:
              command: ["healthcheck-queue"]
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command: ["healthcheck-queue"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: console-laravel-storage-pvc
        - name: data
          persistentVolumeClaim:
            claimName: console-laravel-data-pvc
        - name: larakube-config
          hostPath:
            path: /Users/jsluchavez/.larakube
            type: DirectoryOrCreate
        - name: larakube-workspace
          hostPath:
            path: /Users/jsluchavez/Codes/Ideas/laravel-k8s
            type: Directory
